--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AngBlog</title>
+  <title>Angular2Blog</title>
   <base href="/">
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" >
+  <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Service worker support is disabled by default.
        Install the worker script and uncomment to enable.
        Only enable service workers in production.
-  <script type="text/javascript">
+  <script typer ="text/javascript">
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/worker.js').catch(function(err) {
         console.log('Error installing service worker: ', err);
@@ -21,7 +23,7 @@
   -->
 </head>
 <body>
-  <ang-blog-app>Loading...</ang-blog-app>
+  <ang-blog-app><p class="alert-sucess">Loading...</p></ang-blog-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
